--- a/src/js/components/main/main.show.html
+++ b/src/js/components/main/main.show.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col m8 offset-m2 card-panel cyan white-text">
+  <div class="col m8 offset-m2 card-panel teal white-text">
     <h1 class="movieTitle">{{showCtrl.movie().Title}}</h1>
     <div class="moviePoster col m6">
       <img ng-src="{{showCtrl.movie().Poster}}" alt="poster"/>
